sample/manifests/enabled.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    email: admin@example.com
  labels:
    owner: dev-team
  name: demo-deployment
  namespace: demo
spec:
  # minimum-three-replicas
  replicas: 3
  # mismatching-selector
  selector:
    matchLabels:
      app: demo
  # no-rolling-update-strategy
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        email: admin@example.com
      labels:
        app: demo
        owner: dev-team
    spec:
      # no-anti-affinity
      affinity:
        # no-node-affinity
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - demo
            topologyKey: kubernetes.io/hostname
      containers:
      # duplicate-env-var
      # env-var-secret
      # read-secret-from-env-var
      # env-value-from
      - env:
        - name: DB_HOST
          value: localhost
        # latest-tag
        image: nginx:1.27
        # no-liveness-probe
        livenessProbe:
          httpGet:
            path: /health
            # liveness-port
            port: 8080
        name: nginx
        ports:
        # invalid-target-ports
        - containerPort: 8080
          name: http
          protocol: TCP
        # privileged-ports
        # ssh-port
        # no-readiness-probe
        readinessProbe:
          httpGet:
            path: /ready
            # readiness-port
            port: 8080
        # unset-cpu-requirements
        # unset-memory-requirements
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        # privileged-container
        # privilege-escalation-container
        # no-read-only-root-fs
        # run-as-non-root
        securityContext:
          allowPrivilegeEscalation: false
          # drop-net-raw-capability
          capabilities:
            drop:
            - ALL
            - NET_RAW
          privileged: false
          readOnlyRootFilesystem: true
        # startup-port
        # docker-sock
        # sensitive-host-mounts
        # writable-host-mount
        # unsafe-sysctls
        # unsafe-proc-mount
        startupProbe:
          httpGet:
            path: /startup
            port: 8080
      # dnsconfig-options
      dnsConfig:
        options:
        - name: ndots
          value: "2"
      # host-ipc
      # host-network
      # host-pid
      # priority-class-name
      priorityClassName: system-cluster-critical
      # restart-policy
      restartPolicy: Always
      # default-service-account
      # deprecated-service-account-field
      # non-existent-service-account
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: demo-service-account
---
# dangling-networkpolicy
# dangling-networkpolicypeer-podselector
# non-isolated-pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    email: admin@example.com
  labels:
    owner: dev-team
  name: demo-network-policy
  namespace: demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: demo
  podSelector:
    matchLabels:
      app: demo
  policyTypes:
  - Ingress
---
# dangling-service
apiVersion: v1
kind: Service
metadata:
  annotations:
    email: admin@example.com
  labels:
    app: demo
    owner: dev-team
  name: demo-service
  namespace: demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  # exposed-services
  type: ClusterIP
---
# dangling-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    email: admin@example.com
  labels:
    owner: dev-team
  name: demo-ingress
  namespace: demo
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-service
            port:
              number: 80
        path: /
        pathType: Prefix
